Change access to Puzzle from name to id
