# docs/swagger.json
@@ -110,7 +110,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Puzzle name",
+                        "description": "Puzzle Id",
                         "name": "puzzle",
                         "in": "query",
                         "required": true
@@ -158,7 +158,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Puzzle name",
+                        "description": "Puzzle Id",
                         "name": "puzzle",
                         "in": "query",
                         "required": true
@@ -206,7 +206,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Puzzle name",
+                        "description": "Puzzle Id",
                         "name": "puzzle",
                         "in": "query",
                         "required": true
@@ -339,6 +339,47 @@
                             "type": "array",
                             "items": {
                                 "$ref": "#/definitions/models.PuzzleResponse"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/puzzles/ids": {
+            "get": {
+                "description": "Returns IDs of all puzzles for a specific theme",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Puzzles"
+                ],
+                "summary": "Get puzzle IDs",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Theme name",
+                        "name": "theme",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
                             }
                         }
                     },
